--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@ ga('create', 'G-SRFJ3W9S0F', 'auto');
 ga('set', 'appName', 'mobzillatechkg');
 </script>
 <script async src="https://www.google-analytics.com/analytics.js"></script>
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BJ0KCEWLRC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BJ0KCEWLRC');
+</script>
+  
 </head>
 <body style="background: #282828" class="cs-HTML theme-unified">
   <!-- 360 -->
